message('    enabling native: atom')

mpn_hdr_map += {
    'gmp-mparam.h': files('gmp-mparam.h.in'),
}

mpn_src_map += {        
    'addlsh1_n': files('addlsh1_n.as'),
    'addlsh_n': files('addlsh_n.asm'),
    'addlsh_nc': files('addlsh_n.asm'),
    'addmul_1': files('addmul_1.as'),
    'addmul_2': files('addmul_2.as'),
    'add_n': files('add_n.as'),
    'andn_n': files('andn_n.as'),
    'and_n': files('and_n.as'),
    'com_n': files('com_n.as'),
    'copyd': files('copyd.as'),
    'copyi': files('copyi.asm'),
    'divexact_byff': files('divexact_byff.as'),
    'divrem_hensel_qr_1_1': files('divrem_hensel_qr_1_1.asm'),
    'iorn_n': files('iorn_n.as'),
    'ior_n': files('ior_n.as'),
    'karaadd': files('karaadd.asm'),
    'karasub': files('karasub.asm'),
    'lshift': files('lshift.as'),
    'lshift1': files('lshift1.as'),
    'lshift2': files('lshift2.asm'),
    'mod_1_1': files('mod_1_1.asm'),
    'mod_1_2': files('mod_1_2.asm'),
    'mod_1_3': files('mod_1_3.asm'),
    'mul_1': files('mul_1.as'),
    'mul_2': files('mul_2.as'),
    'mul_basecase': files('mul_basecase.as'),
    'nand_n': files('nand_n.as'),
    'nior_n': files('nior_n.as'),
    'redc_1': files('redc_1.as'),
    'rsh1add_n': files('rsh1add_n.as'),
    'rsh1sub_n': files('rsh1sub_n.as'),
    'rshift': files('rshift.as'),
    'rsh_divrem_hensel_qr_1_1': files('rsh_divrem_hensel_qr_1_1.asm'),
    'sqr_basecase': files('sqr_basecase.as'),
    'store': files('store.asm'),
    'sublsh1_n': files('sublsh1_n.as'),
    'sublsh_n': files('sublsh_n.asm'),
    'sublsh_nc': files('sublsh_n.asm'),
    'submul_1': files('submul_1.as'),
    'sub_n': files('sub_n.as'),
    'xnor_n': files('xnor_n.as'),
    'xor_n': files('xor_n.as'),
}
