if 'bobcat' in arch_set
    mpn_hdr_map += {
        'gmp-mparam.h': 'mpn/x86_64/bobcat/gmp-mparam.h.in',
    }

    mpn_src_map += {
        'nior_n': 'mpn/x86_64/bobcat/nior_n.asm',
        'divrem_hensel_r_1': 'mpn/x86_64/bobcat/divrem_hensel_r_1.asm',
        'sub_n': 'mpn/x86_64/bobcat/sub_n.as',
        'lshift': 'mpn/x86_64/bobcat/lshift.as',
        'xnor_n': 'mpn/x86_64/bobcat/xnor_n.as',
        'redc_1': 'mpn/x86_64/bobcat/redc_1.as',
        'mul_1': 'mpn/x86_64/bobcat/mul_1.asm',
        'nand_n': 'mpn/x86_64/bobcat/nand_n.asm',
        'sqr_basecase': 'mpn/x86_64/bobcat/sqr_basecase.as',
        'divrem_hensel_qr_1_2': 'mpn/x86_64/bobcat/divrem_hensel_qr_1_2.asm',
        'rsh1sub_n': 'mpn/x86_64/bobcat/rsh1sub_n.as',
        'divexact_byff': 'mpn/x86_64/bobcat/divexact_byff.as',
        'divrem_hensel_qr_1_1': 'mpn/x86_64/bobcat/divrem_hensel_qr_1_1.asm',
        'ior_n': 'mpn/x86_64/bobcat/ior_n.asm',
        'subadd_n': 'mpn/x86_64/bobcat/subadd_n.as',
        'and_n': 'mpn/x86_64/bobcat/and_n.asm',
        'addadd_n': 'mpn/x86_64/bobcat/addadd_n.as',
        'store': 'mpn/x86_64/bobcat/store.asm',
        'copyd': 'mpn/x86_64/bobcat/copyd.as',
        'xor_n': 'mpn/x86_64/bobcat/xor_n.asm',
        'hamdist': 'mpn/x86_64/bobcat/hamdist.asm',
        'sub_err1_n': 'mpn/x86_64/bobcat/sub_err1_n.asm',
        'rsh_divrem_hensel_qr_1_1': 'mpn/x86_64/bobcat/rsh_divrem_hensel_qr_1_1.asm',
        'popcount': 'mpn/x86_64/bobcat/popcount.asm',
        'submul_1': 'mpn/x86_64/bobcat/submul_1.as',
        'rsh_divrem_hensel_qr_1_2': 'mpn/x86_64/bobcat/rsh_divrem_hensel_qr_1_2.asm',
        'addlsh_n': 'mpn/x86_64/bobcat/addlsh_n.asm',
        'addmul_1': 'mpn/x86_64/bobcat/addmul_1.as',
        'addsub_n': 'mpn/x86_64/bobcat/addsub_n.as',
        'not': 'mpn/x86_64/bobcat/not.asm',
        'addlsh1_n': 'mpn/x86_64/bobcat/addlsh1_n.as',
        'iorn_n': 'mpn/x86_64/bobcat/iorn_n.as',
        'sublsh1_n': 'mpn/x86_64/bobcat/sublsh1_n.as',
        'rshift2': 'mpn/x86_64/bobcat/rshift2.asm',
        'andn_n': 'mpn/x86_64/bobcat/andn_n.as',
        'karaadd': 'mpn/x86_64/bobcat/karaadd.asm',
        'lshiftc': 'mpn/x86_64/bobcat/lshiftc.asm',
        'com_n': 'mpn/x86_64/bobcat/com_n.as',
        'add_err1_n': 'mpn/x86_64/bobcat/add_err1_n.asm',
        'lshift1': 'mpn/x86_64/bobcat/lshift1.as',
        'copyi': 'mpn/x86_64/bobcat/copyi.as',
        'add_n': 'mpn/x86_64/bobcat/add_n.as',
        'mod_1_1': 'mpn/x86_64/bobcat/mod_1_1.asm',
        'sublsh_n': 'mpn/x86_64/bobcat/sublsh_n.asm',
        'sumdiff_n': 'mpn/x86_64/bobcat/sumdiff_n.as',
        'mul_basecase': 'mpn/x86_64/bobcat/mul_basecase.as',
        'karasub': 'mpn/x86_64/bobcat/karasub.asm',
        'rsh1add_n': 'mpn/x86_64/bobcat/rsh1add_n.as',
        'lshift2': 'mpn/x86_64/bobcat/lshift2.asm',
        'rshift': 'mpn/x86_64/bobcat/rshift.asm',
    }

endif
