if 'bobcat' in arch_set
    mpn_hdr_map += {
        'gmp-mparam.h': 'mpn/x86_64/bobcat/gmp-mparam.h.in',
    }

    mpn_src_map += {
        'addadd_n': 'mpn/x86_64/bobcat/addadd_n.as',
        'addlsh1_n': 'mpn/x86_64/bobcat/addlsh1_n.as',
        'addlsh_n': 'mpn/x86_64/bobcat/addlsh_n.asm',
        'addlsh_nc': 'mpn/x86_64/bobcat/addlsh_n.asm',
        'addmul_1': 'mpn/x86_64/bobcat/addmul_1.as',
        'addsub_n': 'mpn/x86_64/bobcat/addsub_n.as',
        'add_err1_n': 'mpn/x86_64/bobcat/add_err1_n.asm',
        'add_n': 'mpn/x86_64/bobcat/add_n.as',
        'andn_n': 'mpn/x86_64/bobcat/andn_n.as',
        'and_n': 'mpn/x86_64/bobcat/and_n.asm',
        'com_n': 'mpn/x86_64/bobcat/com_n.as',
        'copyd': 'mpn/x86_64/bobcat/copyd.as',
        'copyi': 'mpn/x86_64/bobcat/copyi.as',
        'divexact_byff': 'mpn/x86_64/bobcat/divexact_byff.as',
        'divrem_hensel_qr_1_1': 'mpn/x86_64/bobcat/divrem_hensel_qr_1_1.asm',
        'divrem_hensel_qr_1_2': 'mpn/x86_64/bobcat/divrem_hensel_qr_1_2.asm',
        'divrem_hensel_r_1': 'mpn/x86_64/bobcat/divrem_hensel_r_1.asm',
        'hamdist': 'mpn/x86_64/bobcat/hamdist.asm',
        'iorn_n': 'mpn/x86_64/bobcat/iorn_n.as',
        'ior_n': 'mpn/x86_64/bobcat/ior_n.asm',
        'karaadd': 'mpn/x86_64/bobcat/karaadd.asm',
        'karasub': 'mpn/x86_64/bobcat/karasub.asm',
        'lshift': 'mpn/x86_64/bobcat/lshift.as',
        'lshift1': 'mpn/x86_64/bobcat/lshift1.as',
        'lshift2': 'mpn/x86_64/bobcat/lshift2.asm',
        'lshiftc': 'mpn/x86_64/bobcat/lshiftc.asm',
        'mod_1_1': 'mpn/x86_64/bobcat/mod_1_1.asm',
        'mul_1': 'mpn/x86_64/bobcat/mul_1.asm',
        'mul_basecase': 'mpn/x86_64/bobcat/mul_basecase.as',
        'nand_n': 'mpn/x86_64/bobcat/nand_n.asm',
        'nior_n': 'mpn/x86_64/bobcat/nior_n.asm',
        'not': 'mpn/x86_64/bobcat/not.asm',
        'popcount': 'mpn/x86_64/bobcat/popcount.asm',
        'redc_1': 'mpn/x86_64/bobcat/redc_1.as',
        'rsh1add_n': 'mpn/x86_64/bobcat/rsh1add_n.as',
        'rsh1sub_n': 'mpn/x86_64/bobcat/rsh1sub_n.as',
        'rshift': 'mpn/x86_64/bobcat/rshift.asm',
        'rshift2': 'mpn/x86_64/bobcat/rshift2.asm',
        'rsh_divrem_hensel_qr_1_1': 'mpn/x86_64/bobcat/rsh_divrem_hensel_qr_1_1.asm',
        'rsh_divrem_hensel_qr_1_2': 'mpn/x86_64/bobcat/rsh_divrem_hensel_qr_1_2.asm',
        'sqr_basecase': 'mpn/x86_64/bobcat/sqr_basecase.as',
        'store': 'mpn/x86_64/bobcat/store.asm',
        'subadd_n': 'mpn/x86_64/bobcat/subadd_n.as',
        'sublsh1_n': 'mpn/x86_64/bobcat/sublsh1_n.as',
        'sublsh_n': 'mpn/x86_64/bobcat/sublsh_n.asm',
        'sublsh_nc': 'mpn/x86_64/bobcat/sublsh_n.asm',
        'submul_1': 'mpn/x86_64/bobcat/submul_1.as',
        'sub_err1_n': 'mpn/x86_64/bobcat/sub_err1_n.asm',
        'sub_n': 'mpn/x86_64/bobcat/sub_n.as',
        'sumdiff_n': 'mpn/x86_64/bobcat/sumdiff_n.as',
        'xnor_n': 'mpn/x86_64/bobcat/xnor_n.as',
        'xor_n': 'mpn/x86_64/bobcat/xor_n.asm',
    }

endif
