message('    enabling native: bobcat')

mpn_hdr_map += {
    'gmp-mparam.h': files('gmp-mparam.h.in'),
}

mpn_src_map += {
    'addadd_n': files('addadd_n.as'),
    'addlsh1_n': files('addlsh1_n.as'),
    'addlsh_n': files('addlsh_n.asm'),
    'addlsh_nc': files('addlsh_n.asm'),
    'addmul_1': files('addmul_1.as'),
    'addsub_n': files('addsub_n.as'),
    'add_err1_n': files('add_err1_n.asm'),
    'add_n': files('add_n.as'),
    'andn_n': files('andn_n.as'),
    'and_n': files('and_n.asm'),
    'com_n': files('com_n.as'),
    'copyd': files('copyd.as'),
    'copyi': files('copyi.as'),
    'divexact_byff': files('divexact_byff.as'),
    'divrem_hensel_qr_1_1': files('divrem_hensel_qr_1_1.asm'),
    'divrem_hensel_qr_1_2': files('divrem_hensel_qr_1_2.asm'),
    'divrem_hensel_r_1': files('divrem_hensel_r_1.asm'),
    'hamdist': files('hamdist.asm'),
    'iorn_n': files('iorn_n.as'),
    'ior_n': files('ior_n.asm'),
    'karaadd': files('karaadd.asm'),
    'karasub': files('karasub.asm'),
    'lshift': files('lshift.as'),
    'lshift1': files('lshift1.as'),
    'lshift2': files('lshift2.asm'),
    'lshiftc': files('lshiftc.asm'),
    'mod_1_1': files('mod_1_1.asm'),
    'mul_1': files('mul_1.asm'),
    'mul_basecase': files('mul_basecase.as'),
    'nand_n': files('nand_n.asm'),
    'nior_n': files('nior_n.asm'),
    'not': files('not.asm'),
    'popcount': files('popcount.asm'),
    'redc_1': files('redc_1.as'),
    'rsh1add_n': files('rsh1add_n.as'),
    'rsh1sub_n': files('rsh1sub_n.as'),
    'rshift': files('rshift.asm'),
    'rshift2': files('rshift2.asm'),
    'rsh_divrem_hensel_qr_1_1': files('rsh_divrem_hensel_qr_1_1.asm'),
    'rsh_divrem_hensel_qr_1_2': files('rsh_divrem_hensel_qr_1_2.asm'),
    'sqr_basecase': files('sqr_basecase.as'),
    'store': files('store.asm'),
    'subadd_n': files('subadd_n.as'),
    'sublsh1_n': files('sublsh1_n.as'),
    'sublsh_n': files('sublsh_n.asm'),
    'sublsh_nc': files('sublsh_n.asm'),
    'submul_1': files('submul_1.as'),
    'sub_err1_n': files('sub_err1_n.asm'),
    'sub_n': files('sub_n.as'),
    'sumdiff_n': files('sumdiff_n.as'),
    'xnor_n': files('xnor_n.as'),
    'xor_n': files('xor_n.asm'),
}

