message('    enabling native: bulldozer')

mpn_hdr_map += {
    'gmp-mparam.h': files('gmp-mparam.h.in'),
}

mpn_src_map += {
    'com_n': files('com_n.asm'),
    'copyd': files('copyd.asm'),
    'copyi': files('copyi.asm'),
    'lshift': files('lshift.asm'),
    'mul_basecase': files('mul_basecase.asm'),
    'rshift': files('rshift.asm'),
}

