message('    enabling native: core2')

mpn_hdr_map += {
    'gmp-mparam.h': 'mpn/x86_64/core2/gmp-mparam.h.in',
}

mpn_src_map += {
    'addadd_n': 'mpn/x86_64/core2/addadd_n.asm',
    'addlsh_n': 'mpn/x86_64/core2/addlsh_n.as',
    'addmul_1': 'mpn/x86_64/core2/addmul_1.asm',
    'addmul_1c': 'mpn/x86_64/core2/addmul_1.asm',
    'addmul_2': 'mpn/x86_64/core2/addmul_2.as',
    'addsub_n': 'mpn/x86_64/core2/addsub_n.asm',
    'add_n': 'mpn/x86_64/core2/add_n.as',
    'andn_n': 'mpn/x86_64/core2/andn_n.as',
    'and_n': 'mpn/x86_64/core2/and_n.as',
    'com_n': 'mpn/x86_64/core2/com_n.as',
    'copyd': 'mpn/x86_64/core2/copyd.as',
    'copyi': 'mpn/x86_64/core2/copyi.asm',
    'divexact_byff': 'mpn/x86_64/core2/divexact_byff.as',
    'divrem_hensel_qr_1_2': 'mpn/x86_64/core2/divrem_hensel_qr_1_2.asm',
    'hamdist': 'mpn/x86_64/core2/hamdist.asm',
    'iorn_n': 'mpn/x86_64/core2/iorn_n.as',
    'ior_n': 'mpn/x86_64/core2/ior_n.as',
    'karaadd': 'mpn/x86_64/core2/karaadd.asm',
    'karasub': 'mpn/x86_64/core2/karasub.asm',
    'lshift': 'mpn/x86_64/core2/lshift.asm',
    'mod_1_1': 'mpn/x86_64/core2/mod_1_1.asm',
    'mod_1_2': 'mpn/x86_64/core2/mod_1_2.asm',
    'mod_1_3': 'mpn/x86_64/core2/mod_1_3.asm',
    'mullow_n_basecase': 'mpn/x86_64/core2/mullow_n_basecase.asm',
    'mul_1': 'mpn/x86_64/core2/mul_1.asm',
    'mul_2': 'mpn/x86_64/core2/mul_2.as',
    'mul_basecase': 'mpn/x86_64/core2/mul_basecase.as',
    'nand_n': 'mpn/x86_64/core2/nand_n.as',
    'nior_n': 'mpn/x86_64/core2/nior_n.as',
    'popcount': 'mpn/x86_64/core2/popcount.asm',
    'redc_1': 'mpn/x86_64/core2/redc_1.as',
    'rsh1add_n': 'mpn/x86_64/core2/rsh1add_n.as',
    'rsh1sub_n': 'mpn/x86_64/core2/rsh1sub_n.as',
    'rshift': 'mpn/x86_64/core2/rshift.asm',
    'rsh_divrem_hensel_qr_1_2': 'mpn/x86_64/core2/rsh_divrem_hensel_qr_1_2.asm',
    'store': 'mpn/x86_64/core2/store.asm',
    'subadd_n': 'mpn/x86_64/core2/subadd_n.asm',
    'sublsh1_n': 'mpn/x86_64/core2/sublsh1_n.as',
    'submul_1': 'mpn/x86_64/core2/submul_1.asm',
    'submul_1c': 'mpn/x86_64/core2/submul_1.asm',
    'sub_n': 'mpn/x86_64/core2/sub_n.as',
    'sumdiff_n': 'mpn/x86_64/core2/sumdiff_n.asm',
    'xnor_n': 'mpn/x86_64/core2/xnor_n.as',
    'xor_n': 'mpn/x86_64/core2/xor_n.as',
}
