message('    enabling native: haswell')

mpn_hdr_map += {
    'gmp-mparam.h': 'mpn/x86_64/haswell/gmp-mparam.h.in',
}

mpn_src_map += {
    'addlsh1_n': 'mpn/x86_64/haswell/addlsh1_n.as',
    'add_n': 'mpn/x86_64/haswell/add_n.as',
    'hgcd2': 'mpn/x86_64/haswell/hgcd2.c',
    'karaadd': 'mpn/x86_64/haswell/karaadd.asm',
    'karasub': 'mpn/x86_64/haswell/karasub.as',
    'nsumdiff_n': 'mpn/x86_64/haswell/nsumdiff_n.as',
    'sublsh1_n': 'mpn/x86_64/haswell/sublsh1_n.as',
    'sub_n': 'mpn/x86_64/haswell/sub_n.as',
    'sumdiff_n': 'mpn/x86_64/haswell/sumdiff_n.as',
}
