message('    enabling native: haswell')

mpn_hdr_map += {
    'gmp-mparam.h': files('gmp-mparam.h.in'),
}

mpn_src_map += {
    'addlsh1_n': files('addlsh1_n.as'),
    'add_n': files('add_n.as'),
    'hgcd2': files('hgcd2.c'),
    'karaadd': files('karaadd.asm'),
    'karasub': files('karasub.as'),
    'nsumdiff_n': files('nsumdiff_n.as'),
    'sublsh1_n': files('sublsh1_n.as'),
    'sub_n': files('sub_n.as'),
    'sumdiff_n': files('sumdiff_n.as'),
}
