if 'k8' in arch_set
    mpn_hdr_map += {
        'gmp-mparam.h': 'mpn/x86_64/k8/gmp-mparam.h.in',
    }

    mpn_src_map += {
        'nior_n': 'mpn/x86_64/k8/nior_n.asm',
        'divrem_hensel_r_1': 'mpn/x86_64/k8/divrem_hensel_r_1.asm',
        'sub_n': 'mpn/x86_64/k8/sub_n.as',
        'lshift': 'mpn/x86_64/k8/lshift.as',
        'xnor_n': 'mpn/x86_64/k8/xnor_n.as',
        'redc_1': 'mpn/x86_64/k8/redc_1.as',
        'mul_1': 'mpn/x86_64/k8/mul_1.asm',
        'nand_n': 'mpn/x86_64/k8/nand_n.asm',
        'divrem_hensel_qr_1_2': 'mpn/x86_64/k8/divrem_hensel_qr_1_2.asm',
        'rsh1sub_n': 'mpn/x86_64/k8/rsh1sub_n.as',
        'divexact_byff': 'mpn/x86_64/k8/divexact_byff.as',
        'divrem_hensel_qr_1_1': 'mpn/x86_64/k8/divrem_hensel_qr_1_1.asm',
        'addmul_1': 'mpn/x86_64/k8/addmul_1.asm',
        'submul_1': 'mpn/x86_64/k8/submul_1.asm',
        'addmul_2': 'mpn/x86_64/k8/addmul_2.as',
        'ior_n': 'mpn/x86_64/k8/ior_n.asm',
        'subadd_n': 'mpn/x86_64/k8/subadd_n.as',
        'and_n': 'mpn/x86_64/k8/and_n.asm',
        'addadd_n': 'mpn/x86_64/k8/addadd_n.as',
        'double': 'mpn/x86_64/k8/double.asm',
        'store': 'mpn/x86_64/k8/store.asm',
        'copyd': 'mpn/x86_64/k8/copyd.as',
        'xor_n': 'mpn/x86_64/k8/xor_n.asm',
        'hamdist': 'mpn/x86_64/k8/hamdist.asm',
        'sub_err1_n': 'mpn/x86_64/k8/sub_err1_n.asm',
        'rsh_divrem_hensel_qr_1_1': 'mpn/x86_64/k8/rsh_divrem_hensel_qr_1_1.asm',
        'popcount': 'mpn/x86_64/k8/popcount.asm',
        'rsh_divrem_hensel_qr_1_2': 'mpn/x86_64/k8/rsh_divrem_hensel_qr_1_2.asm',
        'addlsh_n': 'mpn/x86_64/k8/addlsh_n.asm',
        'addsub_n': 'mpn/x86_64/k8/addsub_n.as',
        'not': 'mpn/x86_64/k8/not.asm',
        'addlsh1_n': 'mpn/x86_64/k8/addlsh1_n.as',
        'mod_1_3': 'mpn/x86_64/k8/mod_1_3.asm',
        'iorn_n': 'mpn/x86_64/k8/iorn_n.as',
        'sublsh1_n': 'mpn/x86_64/k8/sublsh1_n.as',
        'mod_1_2': 'mpn/x86_64/k8/mod_1_2.asm',
        'andn_n': 'mpn/x86_64/k8/andn_n.as',
        'karaadd': 'mpn/x86_64/k8/karaadd.asm',
        'lshiftc': 'mpn/x86_64/k8/lshiftc.asm',
        'com_n': 'mpn/x86_64/k8/com_n.as',
        'add_err1_n': 'mpn/x86_64/k8/add_err1_n.asm',
        'lshift1': 'mpn/x86_64/k8/lshift1.as',
        'copyi': 'mpn/x86_64/k8/copyi.as',
        'add_n': 'mpn/x86_64/k8/add_n.as',
        'mod_1_1': 'mpn/x86_64/k8/mod_1_1.asm',
        'sublsh_n': 'mpn/x86_64/k8/sublsh_n.asm',
        'sumdiff_n': 'mpn/x86_64/k8/sumdiff_n.as',
        'mul_basecase': 'mpn/x86_64/k8/mul_basecase.as',
        'rshift1': 'mpn/x86_64/k8/rshift1.as',
        'mul_2': 'mpn/x86_64/k8/mul_2.as',
        'karasub': 'mpn/x86_64/k8/karasub.asm',
        'half': 'mpn/x86_64/k8/half.asm',
        'rsh1add_n': 'mpn/x86_64/k8/rsh1add_n.as',
        'rshift': 'mpn/x86_64/k8/rshift.asm',
    }

    subdir('k8only')
    subdir('k10')
endif
