if 'k8' in arch_set
    mpn_hdr_map += {
        'gmp-mparam.h': 'mpn/x86_64/k8/gmp-mparam.h.in',
    }

    mpn_src_map += {
        'addadd_n': 'mpn/x86_64/k8/addadd_n.as',
        'addlsh1_n': 'mpn/x86_64/k8/addlsh1_n.as',
        'addlsh_n': 'mpn/x86_64/k8/addlsh_n.asm',
        'addlsh_nc': 'mpn/x86_64/k8/addlsh_n.asm',
        'addmul_1': 'mpn/x86_64/k8/addmul_1.asm',
        'addmul_2': 'mpn/x86_64/k8/addmul_2.as',
        'addsub_n': 'mpn/x86_64/k8/addsub_n.as',
        'add_err1_n': 'mpn/x86_64/k8/add_err1_n.asm',
        'add_n': 'mpn/x86_64/k8/add_n.as',
        'andn_n': 'mpn/x86_64/k8/andn_n.as',
        'and_n': 'mpn/x86_64/k8/and_n.asm',
        'com_n': 'mpn/x86_64/k8/com_n.as',
        'copyd': 'mpn/x86_64/k8/copyd.as',
        'copyi': 'mpn/x86_64/k8/copyi.as',
        'divexact_byff': 'mpn/x86_64/k8/divexact_byff.as',
        'divrem_hensel_qr_1_1': 'mpn/x86_64/k8/divrem_hensel_qr_1_1.asm',
        'divrem_hensel_qr_1_2': 'mpn/x86_64/k8/divrem_hensel_qr_1_2.asm',
        'divrem_hensel_r_1': 'mpn/x86_64/k8/divrem_hensel_r_1.asm',
        'double': 'mpn/x86_64/k8/double.asm',
        'half': 'mpn/x86_64/k8/half.asm',
        'hamdist': 'mpn/x86_64/k8/hamdist.asm',
        'iorn_n': 'mpn/x86_64/k8/iorn_n.as',
        'ior_n': 'mpn/x86_64/k8/ior_n.asm',
        'karaadd': 'mpn/x86_64/k8/karaadd.asm',
        'karasub': 'mpn/x86_64/k8/karasub.asm',
        'lshift': 'mpn/x86_64/k8/lshift.as',
        'lshift1': 'mpn/x86_64/k8/lshift1.as',
        'lshiftc': 'mpn/x86_64/k8/lshiftc.asm',
        'mod_1_1': 'mpn/x86_64/k8/mod_1_1.asm',
        'mod_1_2': 'mpn/x86_64/k8/mod_1_2.asm',
        'mod_1_3': 'mpn/x86_64/k8/mod_1_3.asm',
        'mul_1': 'mpn/x86_64/k8/mul_1.asm',
        'mul_2': 'mpn/x86_64/k8/mul_2.as',
        'mul_basecase': 'mpn/x86_64/k8/mul_basecase.as',
        'nand_n': 'mpn/x86_64/k8/nand_n.asm',
        'nior_n': 'mpn/x86_64/k8/nior_n.asm',
        'not': 'mpn/x86_64/k8/not.asm',
        'popcount': 'mpn/x86_64/k8/popcount.asm',
        'redc_1': 'mpn/x86_64/k8/redc_1.as',
        'rsh1add_n': 'mpn/x86_64/k8/rsh1add_n.as',
        'rsh1sub_n': 'mpn/x86_64/k8/rsh1sub_n.as',
        'rshift': 'mpn/x86_64/k8/rshift.asm',
        'rshift1': 'mpn/x86_64/k8/rshift1.as',
        'rsh_divrem_hensel_qr_1_1': 'mpn/x86_64/k8/rsh_divrem_hensel_qr_1_1.asm',
        'rsh_divrem_hensel_qr_1_2': 'mpn/x86_64/k8/rsh_divrem_hensel_qr_1_2.asm',
        'store': 'mpn/x86_64/k8/store.asm',
        'subadd_n': 'mpn/x86_64/k8/subadd_n.as',
        'sublsh1_n': 'mpn/x86_64/k8/sublsh1_n.as',
        'sublsh_n': 'mpn/x86_64/k8/sublsh_n.asm',
        'sublsh_nc': 'mpn/x86_64/k8/sublsh_n.asm',
        'submul_1': 'mpn/x86_64/k8/submul_1.asm',
        'sub_err1_n': 'mpn/x86_64/k8/sub_err1_n.asm',
        'sub_n': 'mpn/x86_64/k8/sub_n.as',
        'sumdiff_n': 'mpn/x86_64/k8/sumdiff_n.as',
        'xnor_n': 'mpn/x86_64/k8/xnor_n.as',
        'xor_n': 'mpn/x86_64/k8/xor_n.asm',
    }

    subdir('k8only')
    subdir('k10')
endif
