if 'nehalem' in arch_set
    mpn_hdr_map += {
        'gmp-mparam.h': 'mpn/x86_64/nehalem/gmp-mparam.h.in',
    }

    mpn_src_map += {
        'nior_n': 'mpn/x86_64/nehalem/nior_n.asm',
        'mul_2': 'mpn/x86_64/nehalem/mul_2.asm',
        'xnor_n': 'mpn/x86_64/nehalem/xnor_n.asm',
        'sub_n': 'mpn/x86_64/nehalem/sub_n.as',
        'redc_1': 'mpn/x86_64/nehalem/redc_1.as',
        'addlsh_n': 'mpn/x86_64/nehalem/addlsh_n.as',
        'mul_1': 'mpn/x86_64/nehalem/mul_1.asm',
        'nand_n': 'mpn/x86_64/nehalem/nand_n.asm',
        'sumdiff_n': 'mpn/x86_64/nehalem/sumdiff_n.asm',
        'divrem_hensel_qr_1_2': 'mpn/x86_64/nehalem/divrem_hensel_qr_1_2.asm',
        'rsh1sub_n': 'mpn/x86_64/nehalem/rsh1sub_n.as',
        'addadd_n': 'mpn/x86_64/nehalem/addadd_n.asm',
        'com_n': 'mpn/x86_64/nehalem/com_n.asm',
        'divexact_byff': 'mpn/x86_64/nehalem/divexact_byff.as',
        'iorn_n': 'mpn/x86_64/nehalem/iorn_n.asm',
        'addmul_2': 'mpn/x86_64/nehalem/addmul_2.as',
        'ior_n': 'mpn/x86_64/nehalem/ior_n.asm',
        'subadd_n': 'mpn/x86_64/nehalem/subadd_n.asm',
        'and_n': 'mpn/x86_64/nehalem/and_n.asm',
        'store': 'mpn/x86_64/nehalem/store.asm',
        'addsub_n': 'mpn/x86_64/nehalem/addsub_n.asm',
        'copyd': 'mpn/x86_64/nehalem/copyd.asm',
        'xor_n': 'mpn/x86_64/nehalem/xor_n.asm',
        'hamdist': 'mpn/x86_64/nehalem/hamdist.asm',
        'copyi': 'mpn/x86_64/nehalem/copyi.asm',
        'sub_err1_n': 'mpn/x86_64/nehalem/sub_err1_n.asm',
        'popcount': 'mpn/x86_64/nehalem/popcount.asm',
        'submul_1': 'mpn/x86_64/nehalem/submul_1.as',
        'rsh_divrem_hensel_qr_1_2': 'mpn/x86_64/nehalem/rsh_divrem_hensel_qr_1_2.asm',
        'addmul_1': 'mpn/x86_64/nehalem/addmul_1.as',
        'mod_1_3': 'mpn/x86_64/nehalem/mod_1_3.asm',
        'lshift': 'mpn/x86_64/nehalem/lshift.asm',
        'sublsh1_n': 'mpn/x86_64/nehalem/sublsh1_n.as',
        'mod_1_2': 'mpn/x86_64/nehalem/mod_1_2.asm',
        'karaadd': 'mpn/x86_64/nehalem/karaadd.asm',
        'add_err1_n': 'mpn/x86_64/nehalem/add_err1_n.asm',
        'add_n': 'mpn/x86_64/nehalem/add_n.as',
        'mod_1_1': 'mpn/x86_64/nehalem/mod_1_1.asm',
        'mul_basecase': 'mpn/x86_64/nehalem/mul_basecase.as',
        'andn_n': 'mpn/x86_64/nehalem/andn_n.asm',
        'karasub': 'mpn/x86_64/nehalem/karasub.asm',
        'rsh1add_n': 'mpn/x86_64/nehalem/rsh1add_n.as',
        'rshift': 'mpn/x86_64/nehalem/rshift.asm',
    }

    subdir('westmere')
endif
