message('    enabling native: nehalem')

mpn_hdr_map += {
    'gmp-mparam.h': 'mpn/x86_64/nehalem/gmp-mparam.h.in',
}

mpn_src_map += {
    'addadd_n': 'mpn/x86_64/nehalem/addadd_n.asm',
    'addlsh_n': 'mpn/x86_64/nehalem/addlsh_n.as',
    'addmul_1': 'mpn/x86_64/nehalem/addmul_1.as',
    'addmul_2': 'mpn/x86_64/nehalem/addmul_2.as',
    'addsub_n': 'mpn/x86_64/nehalem/addsub_n.asm',
    'add_err1_n': 'mpn/x86_64/nehalem/add_err1_n.asm',
    'add_n': 'mpn/x86_64/nehalem/add_n.as',
    'andn_n': 'mpn/x86_64/nehalem/andn_n.asm',
    'and_n': 'mpn/x86_64/nehalem/and_n.asm',
    'com_n': 'mpn/x86_64/nehalem/com_n.asm',
    'copyd': 'mpn/x86_64/nehalem/copyd.asm',
    'copyi': 'mpn/x86_64/nehalem/copyi.asm',
    'divexact_byff': 'mpn/x86_64/nehalem/divexact_byff.as',
    'divrem_hensel_qr_1_2': 'mpn/x86_64/nehalem/divrem_hensel_qr_1_2.asm',
    'hamdist': 'mpn/x86_64/nehalem/hamdist.asm',
    'iorn_n': 'mpn/x86_64/nehalem/iorn_n.asm',
    'ior_n': 'mpn/x86_64/nehalem/ior_n.asm',
    'karaadd': 'mpn/x86_64/nehalem/karaadd.asm',
    'karasub': 'mpn/x86_64/nehalem/karasub.asm',
    'lshift': 'mpn/x86_64/nehalem/lshift.asm',
    'mod_1_1': 'mpn/x86_64/nehalem/mod_1_1.asm',
    'mod_1_2': 'mpn/x86_64/nehalem/mod_1_2.asm',
    'mod_1_3': 'mpn/x86_64/nehalem/mod_1_3.asm',
    'mul_1': 'mpn/x86_64/nehalem/mul_1.asm',
    'mul_2': 'mpn/x86_64/nehalem/mul_2.asm',
    'mul_basecase': 'mpn/x86_64/nehalem/mul_basecase.as',
    'nand_n': 'mpn/x86_64/nehalem/nand_n.asm',
    'nior_n': 'mpn/x86_64/nehalem/nior_n.asm',
    'popcount': 'mpn/x86_64/nehalem/popcount.asm',
    'redc_1': 'mpn/x86_64/nehalem/redc_1.as',
    'rsh1add_n': 'mpn/x86_64/nehalem/rsh1add_n.as',
    'rsh1sub_n': 'mpn/x86_64/nehalem/rsh1sub_n.as',
    'rshift': 'mpn/x86_64/nehalem/rshift.asm',
    'rsh_divrem_hensel_qr_1_2': 'mpn/x86_64/nehalem/rsh_divrem_hensel_qr_1_2.asm',
    'store': 'mpn/x86_64/nehalem/store.asm',
    'subadd_n': 'mpn/x86_64/nehalem/subadd_n.asm',
    'sublsh1_n': 'mpn/x86_64/nehalem/sublsh1_n.as',
    'submul_1': 'mpn/x86_64/nehalem/submul_1.as',
    'sub_err1_n': 'mpn/x86_64/nehalem/sub_err1_n.asm',
    'sub_n': 'mpn/x86_64/nehalem/sub_n.as',
    'sumdiff_n': 'mpn/x86_64/nehalem/sumdiff_n.asm',
    'xnor_n': 'mpn/x86_64/nehalem/xnor_n.asm',
    'xor_n': 'mpn/x86_64/nehalem/xor_n.asm',
}

