message('    enabling native: nehalem')

mpn_hdr_map += {
    'gmp-mparam.h': files('gmp-mparam.h.in'),
}

mpn_src_map += {
    'addadd_n': files('addadd_n.asm'),
    'addlsh_n': files('addlsh_n.as'),
    'addmul_1': files('addmul_1.as'),
    'addmul_2': files('addmul_2.as'),
    'addsub_n': files('addsub_n.asm'),
    'add_err1_n': files('add_err1_n.asm'),
    'add_n': files('add_n.as'),
    'andn_n': files('andn_n.asm'),
    'and_n': files('and_n.asm'),
    'com_n': files('com_n.asm'),
    'copyd': files('copyd.asm'),
    'copyi': files('copyi.asm'),
    'divexact_byff': files('divexact_byff.as'),
    'divrem_hensel_qr_1_2': files('divrem_hensel_qr_1_2.asm'),
    'hamdist': files('hamdist.asm'),
    'iorn_n': files('iorn_n.asm'),
    'ior_n': files('ior_n.asm'),
    'karaadd': files('karaadd.asm'),
    'karasub': files('karasub.asm'),
    'lshift': files('lshift.asm'),
    'mod_1_1': files('mod_1_1.asm'),
    'mod_1_2': files('mod_1_2.asm'),
    'mod_1_3': files('mod_1_3.asm'),
    'mul_1': files('mul_1.asm'),
    'mul_2': files('mul_2.asm'),
    'mul_basecase': files('mul_basecase.as'),
    'nand_n': files('nand_n.asm'),
    'nior_n': files('nior_n.asm'),
    'popcount': files('popcount.asm'),
    'redc_1': files('redc_1.as'),
    'rsh1add_n': files('rsh1add_n.as'),
    'rsh1sub_n': files('rsh1sub_n.as'),
    'rshift': files('rshift.asm'),
    'rsh_divrem_hensel_qr_1_2': files('rsh_divrem_hensel_qr_1_2.asm'),
    'store': files('store.asm'),
    'subadd_n': files('subadd_n.asm'),
    'sublsh1_n': files('sublsh1_n.as'),
    'submul_1': files('submul_1.as'),
    'sub_err1_n': files('sub_err1_n.asm'),
    'sub_n': files('sub_n.as'),
    'sumdiff_n': files('sumdiff_n.asm'),
    'xnor_n': files('xnor_n.asm'),
    'xor_n': files('xor_n.asm'),
}

