if 'netburst' in arch_set
    mpn_hdr_map += {
        'gmp-mparam.h': 'mpn/x86_64/netburst/gmp-mparam.h.in',
    }

    mpn_src_map += {
        'sub_n': 'mpn/x86_64/netburst/sub_n.as',
        'and_n': 'mpn/x86_64/netburst/and_n.as',
        'lshift': 'mpn/x86_64/netburst/lshift.as',
        'xnor_n': 'mpn/x86_64/netburst/xnor_n.as',
        'redc_1': 'mpn/x86_64/netburst/redc_1.as',
        'mul_1': 'mpn/x86_64/netburst/mul_1.as',
        'divexact_byff': 'mpn/x86_64/netburst/divexact_byff.as',
        'xor_n': 'mpn/x86_64/netburst/xor_n.as',
        'addmul_2': 'mpn/x86_64/netburst/addmul_2.as',
        'nand_n': 'mpn/x86_64/netburst/nand_n.as',
        'rshift': 'mpn/x86_64/netburst/rshift.as',
        'submul_1': 'mpn/x86_64/netburst/submul_1.as',
        'nior_n': 'mpn/x86_64/netburst/nior_n.as',
        'addmul_1': 'mpn/x86_64/netburst/addmul_1.as',
        'ior_n': 'mpn/x86_64/netburst/ior_n.as',
        'iorn_n': 'mpn/x86_64/netburst/iorn_n.as',
        'andn_n': 'mpn/x86_64/netburst/andn_n.as',
        'karaadd': 'mpn/x86_64/netburst/karaadd.asm',
        'com_n': 'mpn/x86_64/netburst/com_n.as',
        'add_n': 'mpn/x86_64/netburst/add_n.as',
        'mul_basecase': 'mpn/x86_64/netburst/mul_basecase.as',
        'mul_2': 'mpn/x86_64/netburst/mul_2.as',
        'karasub': 'mpn/x86_64/netburst/karasub.asm',
    }

endif
