message('    enabling native: netburst')

mpn_hdr_map += {
    'gmp-mparam.h': files('gmp-mparam.h.in'),
}

mpn_src_map += {
    'addmul_1': files('addmul_1.as'),
    'addmul_2': files('addmul_2.as'),
    'add_n': files('add_n.as'),
    'andn_n': files('andn_n.as'),
    'and_n': files('and_n.as'),
    'com_n': files('com_n.as'),
    'divexact_byff': files('divexact_byff.as'),
    'iorn_n': files('iorn_n.as'),
    'ior_n': files('ior_n.as'),
    'karaadd': files('karaadd.asm'),
    'karasub': files('karasub.asm'),
    'lshift': files('lshift.as'),
    'mul_1': files('mul_1.as'),
    'mul_2': files('mul_2.as'),
    'mul_basecase': files('mul_basecase.as'),
    'nand_n': files('nand_n.as'),
    'nior_n': files('nior_n.as'),
    'redc_1': files('redc_1.as'),
    'rshift': files('rshift.as'),
    'submul_1': files('submul_1.as'),
    'sub_n': files('sub_n.as'),
    'xnor_n': files('xnor_n.as'),
    'xor_n': files('xor_n.as'),
}

