if 'sandybridge' in arch_set
    mpn_hdr_map += {
        'gmp-mparam.h': 'mpn/x86_64/sandybridge/gmp-mparam.h.in',
    }

    mpn_src_map += {
        'nior_n': 'mpn/x86_64/sandybridge/nior_n.asm',
        'mul_2': 'mpn/x86_64/sandybridge/mul_2.asm',
        'xnor_n': 'mpn/x86_64/sandybridge/xnor_n.asm',
        'sub_n': 'mpn/x86_64/sandybridge/sub_n.as',
        'lshift': 'mpn/x86_64/sandybridge/lshift.as',
        'redc_1': 'mpn/x86_64/sandybridge/redc_1.as',
        'mul_1': 'mpn/x86_64/sandybridge/mul_1.asm',
        'nand_n': 'mpn/x86_64/sandybridge/nand_n.asm',
        'com_n': 'mpn/x86_64/sandybridge/com_n.asm',
        'divexact_byff': 'mpn/x86_64/sandybridge/divexact_byff.as',
        'divrem_hensel_qr_1_1': 'mpn/x86_64/sandybridge/divrem_hensel_qr_1_1.asm',
        'addmul_1': 'mpn/x86_64/sandybridge/addmul_1.asm',
        'iorn_n': 'mpn/x86_64/sandybridge/iorn_n.asm',
        'submul_1': 'mpn/x86_64/sandybridge/submul_1.asm',
        'addmul_2': 'mpn/x86_64/sandybridge/addmul_2.as',
        'ior_n': 'mpn/x86_64/sandybridge/ior_n.asm',
        'and_n': 'mpn/x86_64/sandybridge/and_n.asm',
        'store': 'mpn/x86_64/sandybridge/store.asm',
        'copyd': 'mpn/x86_64/sandybridge/copyd.asm',
        'rshift': 'mpn/x86_64/sandybridge/rshift.as',
        'xor_n': 'mpn/x86_64/sandybridge/xor_n.asm',
        'hamdist': 'mpn/x86_64/sandybridge/hamdist.asm',
        'copyi': 'mpn/x86_64/sandybridge/copyi.asm',
        'rsh_divrem_hensel_qr_1_1': 'mpn/x86_64/sandybridge/rsh_divrem_hensel_qr_1_1.asm',
        'popcount': 'mpn/x86_64/sandybridge/popcount.asm',
        'rsh_divrem_hensel_qr_1_2': 'mpn/x86_64/sandybridge/rsh_divrem_hensel_qr_1_2.asm',
        'mullow_n_basecase': 'mpn/x86_64/sandybridge/mullow_n_basecase.asm',
        'mod_1_3': 'mpn/x86_64/sandybridge/mod_1_3.asm',
        'mod_1_2': 'mpn/x86_64/sandybridge/mod_1_2.asm',
        'karaadd': 'mpn/x86_64/sandybridge/karaadd.asm',
        'lshiftc': 'mpn/x86_64/sandybridge/lshiftc.asm',
        'lshift1': 'mpn/x86_64/sandybridge/lshift1.as',
        'add_n': 'mpn/x86_64/sandybridge/add_n.as',
        'mod_1_1': 'mpn/x86_64/sandybridge/mod_1_1.asm',
        'mul_basecase': 'mpn/x86_64/sandybridge/mul_basecase.as',
        'andn_n': 'mpn/x86_64/sandybridge/andn_n.asm',
        'karasub': 'mpn/x86_64/sandybridge/karasub.asm',
        'lshift2': 'mpn/x86_64/sandybridge/lshift2.asm',
    }

    subdir('ivybridge')
endif
