message('    enabling native: sandybridge')

mpn_hdr_map += {
    'gmp-mparam.h': files('gmp-mparam.h.in'),
}

mpn_src_map += {
    'addmul_1': files('addmul_1.asm'),
    'addmul_2': files('addmul_2.as'),
    'add_n': files('add_n.as'),
    'andn_n': files('andn_n.asm'),
    'and_n': files('and_n.asm'),
    'com_n': files('com_n.asm'),
    'copyd': files('copyd.asm'),
    'copyi': files('copyi.asm'),
    'divexact_byff': files('divexact_byff.as'),
    'divrem_hensel_qr_1_1': files('divrem_hensel_qr_1_1.asm'),
    'hamdist': files('hamdist.asm'),
    'iorn_n': files('iorn_n.asm'),
    'ior_n': files('ior_n.asm'),
    'karaadd': files('karaadd.asm'),
    'karasub': files('karasub.asm'),
    'lshift': files('lshift.as'),
    'lshift1': files('lshift1.as'),
    'lshift2': files('lshift2.asm'),
    'lshiftc': files('lshiftc.asm'),
    'mod_1_1': files('mod_1_1.asm'),
    'mod_1_2': files('mod_1_2.asm'),
    'mod_1_3': files('mod_1_3.asm'),
    'mullow_n_basecase': files('mullow_n_basecase.asm'),
    'mul_1': files('mul_1.asm'),
    'mul_2': files('mul_2.asm'),
    'mul_basecase': files('mul_basecase.as'),
    'nand_n': files('nand_n.asm'),
    'nior_n': files('nior_n.asm'),
    'popcount': files('popcount.asm'),
    'redc_1': files('redc_1.as'),
    'rshift': files('rshift.as'),
    'rsh_divrem_hensel_qr_1_1': files('rsh_divrem_hensel_qr_1_1.asm'),
    'rsh_divrem_hensel_qr_1_2': files('rsh_divrem_hensel_qr_1_2.asm'),
    'store': files('store.asm'),
    'submul_1': files('submul_1.asm'),
    'sub_n': files('sub_n.as'),
    'xnor_n': files('xnor_n.asm'),
    'xor_n': files('xor_n.asm'),
}

