if 'bobcat' in arch_set
    mpn_hdr_map += {
        'gmp-mparam.h': 'mpn/x86_64w/bobcat/gmp-mparam.h.in'
    }

    mpn_src_map += {
        'add_n': 'mpn/x86_64w/bobcat/add_n.asm',
        'addadd_n': 'mpn/x86_64w/bobcat/addadd_n.asm',
        'addlsh1_n': 'mpn/x86_64w/bobcat/addlsh1_n.asm',
        'addlsh_n': 'mpn/x86_64w/bobcat/addlsh_n.asm',
        'addmul_1': 'mpn/x86_64w/bobcat/addmul_1.asm',
        'addsub_n': 'mpn/x86_64w/bobcat/addsub_n.asm',
        'and_n': 'mpn/x86_64w/bobcat/and_n.asm',
        'andn_n': 'mpn/x86_64w/bobcat/andn_n.asm',
        'com_n': 'mpn/x86_64w/bobcat/com_n.asm',
        'copyd': 'mpn/x86_64w/bobcat/copyd.asm',
        'copyi': 'mpn/x86_64w/bobcat/copyi.asm',
        'divexact_byff': 'mpn/x86_64w/bobcat/divexact_byff.asm',
        'divrem_hensel_qr_1_1': 'mpn/x86_64w/bobcat/divrem_hensel_qr_1_1.asm',
        'divrem_hensel_qr_1_2': 'mpn/x86_64w/bobcat/divrem_hensel_qr_1_2.asm',
        'divrem_hensel_r_1': 'mpn/x86_64w/bobcat/divrem_hensel_r_1.asm',
        'hamdist': 'mpn/x86_64w/bobcat/hamdist.asm',
        'ior_n': 'mpn/x86_64w/bobcat/ior_n.asm',
        'iorn_n': 'mpn/x86_64w/bobcat/iorn_n.asm',
        'karaadd': 'mpn/x86_64w/bobcat/karaadd.asm',
        'karasub': 'mpn/x86_64w/bobcat/karasub.asm',
        'lshift': 'mpn/x86_64w/bobcat/lshift.asm',
        'lshift1': 'mpn/x86_64w/bobcat/lshift1.asm',
        'lshift2': 'mpn/x86_64w/bobcat/lshift2.asm',
        'lshiftc': 'mpn/x86_64w/bobcat/lshiftc.asm',
        'mod_1_1': 'mpn/x86_64w/bobcat/mod_1_1.asm',
        'mul_1': 'mpn/x86_64w/bobcat/mul_1.asm',
        'mul_basecase': 'mpn/x86_64w/bobcat/mul_basecase.asm',
        'nand_n': 'mpn/x86_64w/bobcat/nand_n.asm',
        'nior_n': 'mpn/x86_64w/bobcat/nior_n.asm',
        'not': 'mpn/x86_64w/bobcat/not.asm',
        'popcount': 'mpn/x86_64w/bobcat/popcount.asm',
        'redc_1': 'mpn/x86_64w/bobcat/redc_1.asm',
        'rsh1add_n': 'mpn/x86_64w/bobcat/rsh1add_n.asm',
        'rsh1sub_n': 'mpn/x86_64w/bobcat/rsh1sub_n.asm',
        'rsh_divrem_hensel_qr_1_1': 'mpn/x86_64w/bobcat/rsh_divrem_hensel_qr_1_1.asm',
        'rsh_divrem_hensel_qr_1_2': 'mpn/x86_64w/bobcat/rsh_divrem_hensel_qr_1_2.asm',
        'rshift': 'mpn/x86_64w/bobcat/rshift.asm',
        'rshift2': 'mpn/x86_64w/bobcat/rshift2.asm',
        'sqr_basecase': 'mpn/x86_64w/bobcat/sqr_basecase.asm',
        'store': 'mpn/x86_64w/bobcat/store.asm',
        'sub_err1_n': 'mpn/x86_64w/bobcat/sub_err1_n.asm',
        'sub_n': 'mpn/x86_64w/bobcat/sub_n.asm',
        'subadd_n': 'mpn/x86_64w/bobcat/subadd_n.asm',
        'sublsh1_n': 'mpn/x86_64w/bobcat/sublsh1_n.asm',
        'sublsh_n': 'mpn/x86_64w/bobcat/sublsh_n.asm',
        'submul_1': 'mpn/x86_64w/bobcat/submul_1.asm',
        'sumdiff_n': 'mpn/x86_64w/bobcat/sumdiff_n.asm',
        'xnor_n': 'mpn/x86_64w/bobcat/xnor_n.asm',
        'xor_n': 'mpn/x86_64w/bobcat/xor_n.asm',
        'add_err1_n': 'mpn/x86_64w/bobcat/add_err1_n.asm'
    }
endif