message('    enabling native: bulldozer')

mpn_hdr_map += {
    'gmp-mparam.h': 'mpn/x86_64w/bulldozer/gmp-mparam.h.in'
}

mpn_src_map += {
    'com_n': 'mpn/x86_64w/bulldozer/com_n.asm',
    'copyd': 'mpn/x86_64w/bulldozer/copyd.asm',
    'copyi': 'mpn/x86_64w/bulldozer/copyi.asm',
    'lshift': 'mpn/x86_64w/bulldozer/lshift.asm',
    'mul_basecase': 'mpn/x86_64w/bulldozer/mul_basecase.asm',
    'rshift': 'mpn/x86_64w/bulldozer/rshift.asm',
}